BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Organization_Account_Type_BMS_EMEA__c.object
<CustomObject>
    <description>VPRO - November 2013 - BMS EMEA Core Requirements &amp; Design: Custom object to store the list of Organization Account Types that may be associated to a customer. Records on this object are referenced on both customer profiles and customer change requests.</description>
    <fields>
        <fullName>BMS_Code_BMS_EMEA__c</fullName>
        <description>VPRO - November 2013 - BMS EMEA Core Requirements &amp; Design: Custom field to store the BMS Code associated to a given Organization Account Type record.</description>
        <label>BMS Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCV_Code_BMS_EMEA__c</fullName>
        <description>VPRO - November 2013 - BMS EMEA Core Requirements &amp; Design: Custom field to capture the CCV Code of an Organization Account Type record.</description>
        <label>CCV Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_BMS_EMEA__c</fullName>
        <description>VPRO - November 2013 - BMS EMEA Core Requirements &amp; Design: Custom field to display the list of countries a given Organization Account Type record is relevant for.</description>
        <label>Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_BMS_EMEA__c</fullName>
        <description>VPRO - November 2013 - BMS EMEA Core Requirements &amp; Design: Custom field to store the description of an Organization Account Type record.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS_EMEA__c</fullName>
        <description>VPRO Dec-13: external ID used for migrations</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language_BMS_EMEA__c</fullName>
        <description>VPRO - November 2014 - BMS EMEA Core Requirements &amp; Design: Custom field to capture the list of languages an Organization Account Type record applies to.</description>
        <label>Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Short_Label_BMS_EMEA__c</fullName>
        <description>VPRO - November 2013 - BMS EMEA Core Requirements &amp; Design: Custom field to store the short label of an Organization Account Type record.</description>
        <label>Short Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Organization Account Type</label>
    <nameField>
        <label>Organization Account Types</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organization Account Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>